# Raytracing

./: .gitignore  CMakeLists.txt  README.md  Vector.cpp  Vector.h  main.cpp
resources/: config-light.json  config-shadow.json  config-structure.json  config-test.json  config-test2.json  config.json
src/Tools/: Camera.cpp  Camera.h  Color.cpp  Color.h  Entity.cpp  Entity.h  Light.cpp  Light.h  Material.cpp  Material.h  Matrix.cpp  Matrix.h  Object.cpp  Object.h  Point.cpp  Point.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Vector.cpp  Vector.h
src/Tools/Helpers/: Debug.cpp  Debug.h  FileHelper.cpp  FileHelper.h  Serializer.h  StringHelpers.cpp  StringHelpers.h
src/Tools/Images/: Image.cpp  Image.h  ImageType.h
src/Tools/Objects/: Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Include.h  Object.cpp  Object.h  Plan.cpp  Plan.h  Sphere.cpp  Sphere.h  Square.cpp  Square.h
src/Tools/json/: SpoonfeederJson.cpp  SpoonfeederJson.h
